--- a/authors.html
+++ b/authors.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="author" content="Joe Ng" />
-        <meta name="description" content="" />
+        <meta name="description" content="Hi! I am Joe; I write stuff." />
 
 
     <title>Crimellian Rabbit - Authors</title>
 
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css" />
+        <link rel="stylesheet" href="./theme/css/bootstrap.min.css" type="text/css" />
 
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="/theme/css/pygments/native.css" rel="stylesheet" />
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="./theme/css/pygments/native.css" rel="stylesheet" />
     
-    <link href="/theme/css/pelican-twitchy.min.css" rel="stylesheet" />
+    <link href="./theme/css/pelican-twitchy.min.css" rel="stylesheet" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,13 +33,13 @@
         <div id="sidebar-wrapper-small" class="twitchy-background">
             <ul id="accordion-small" class="sidebar-nav sidebar-nav-small">
                 <li>
-        <a href="" title="Crimellian Rabbit" class="collapsed">
+        <a href="." title="Crimellian Rabbit" class="collapsed">
             <span class="glyphicon glyphicon-home"></span>
         </a>
     </li>
                 <li class="nav-divider"></li>
                 <li>
-        <a href="/archives.html" title="Recent Articles" class="collapsed">
+        <a href="./archives.html" title="Recent Articles" class="collapsed">
             <span class="glyphicon glyphicon-th-list"></span>
         </a>
     </li>
@@ -52,10 +52,10 @@
                 </li>
                 <li class="panel anti-panel"><ul id="collapse-social-small" class="collapse ">
                     <li>
-                        <a href="#" title="Another social link"><i class="fa fa-another-social-link-square fa-lg padding-small"></i></a>
+                        <a href="https://github.com/CrimRabbit" title="GitHub"><i class="fa fa-github-square fa-lg padding-small"></i></a>
                     </li>
                     <li>
-                        <a href="#" title="You can add links in your config file"><i class="fa fa-you-can-add-links-in-your-config-file-square fa-lg padding-small"></i></a>
+                        <a href="mailto:tyclian@gmail.com" title="Mail"><i class="fa fa-mail-square fa-lg padding-small"></i></a>
                     </li>
                 </ul></li>
                 <li class="nav-divider"></li>
@@ -69,13 +69,13 @@
         <div id="sidebar-wrapper" class="twitchy-background">
             <ul id="accordion" class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="/">
+                    <a href="./">
                             <span class="glyphicon glyphicon-home padding-small"></span>
                             Crimellian Rabbit
                     </a>
                 </li>
                     <li>
-                        <a href="/archives.html">
+                        <a href="./archives.html">
                             <span class="glyphicon glyphicon-th-list padding-small"></span>
                             Recent Articles
                         </a>
@@ -89,15 +89,15 @@
                 </li>
                 <li class="panel anti-panel"><ul id="collapse-social" class="sidebar_submenu collapse ">
                     <li>
-                        <a href="#" title="Another social link">
-                            <i class="fa fa-another-social-link-square fa-lg padding-small"></i>
-                            Another social link
+                        <a href="https://github.com/CrimRabbit" title="GitHub">
+                            <i class="fa fa-github-square fa-lg padding-small"></i>
+                            GitHub
                         </a>
                     </li>
                     <li>
-                        <a href="#" title="You can add links in your config file">
-                            <i class="fa fa-you-can-add-links-in-your-config-file-square fa-lg padding-small"></i>
-                            You can add links in your config file
+                        <a href="mailto:tyclian@gmail.com" title="Mail">
+                            <i class="fa fa-mail-square fa-lg padding-small"></i>
+                            Mail
                         </a>
                     </li>
                 </ul></li>
@@ -110,6 +110,12 @@
                     </a>
                 </li>
                 <li class="panel anti-panel"><ul id="collapse-pages" class="sidebar_submenu collapse ">
+                    <li>
+                        <a href="./pages/about.html">
+                            <i class="fa fa-file-text padding-small"></i>
+                            About
+                        </a>
+                    </li>
                 </ul></li>
                 
                 <li class="nav-divider"></li>
@@ -121,10 +127,10 @@
                 </li>
                 <li class="panel anti-panel"><ul id="collapse-categories" class="sidebar_submenu collapse ">
                     <li >
-                        <a href="/category/writing.html">
+                        <a href="./category/writing.html">
                             <i class="fa fa-folder-open padding-small"></i>
                             Writing
-                            <span class="badge pull-right categorybadge">2</span>
+                            <span class="badge pull-right categorybadge">13</span>
                         </a>
                     </li>
                 </ul></li>
@@ -144,7 +150,7 @@
             <div class="container-fluid">
     <h1>Authors on Crimellian Rabbit</h1>
 
-    <ul>        <li><a href="/author/joe-ng.html">Joe Ng</a> (2)</li>
+    <ul>        <li><a href="./author/joe-ng.html">Joe Ng</a> (13)</li>
     </ul>
 <footer>
     <hr>
@@ -162,10 +168,10 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery Version 1.11.2 -->
-    <script src="/theme/js/jquery-1.11.2.min.js"></script>
+    <script src="./theme/js/jquery-1.11.2.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="/theme/js/bootstrap.min.js"></script>
+    <script src="./theme/js/bootstrap.min.js"></script>
     <!-- twitchy Script -->
-    <script src="/theme/js/pelican_twitchy.min.js"></script>
+    <script src="./theme/js/pelican_twitchy.min.js"></script>
 </body>
 </html>
